# Lab3ACM

./: =7.2.0  CHANGELOG.md  Lab3ACM.cabal  l1.txt  logrange.txt  newton.txt  variant90.txt  ~
app/: Dots.hs  EndedDifferences.hs  Leibnitz.hs  Main.hs  Newton.hs  Table.hs  Utils.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
