cabal-version:      2.4
name:               Lab3ACM
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mokhov Mark
maintainer:         mohmagen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:	
    base ^>=4.17.2.0,
    formatting ^>=7.2.0,
    text ^>=2.0.0,
    easyplot ^>= 1.0,
  ghc-options: -Wall -fwarn-incomplete-patterns
  extensions: OverloadedStrings, TemplateHaskell


executable Lab3ACM
    import: shared-properties
    main-is:          Main.hs


    -- Modules included in this executable, other than Main.
    other-modules:	Dots EndedDifferences Table Newton Utils Leibnitz

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
